--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
-.App {
+.app {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  gap: 90px;
+  margin: 100px;
+  width: 300px;
+  margin: 20px;
+  padding: 50px;
+}
+.button{
+background-color: green;
+color: white;
+border-radius: 5px;
+  border: 0;
+  height: 30px;
+  width: 80%;
+  margin: 50px;
+  font-weight: bold;
+  font-size: large;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,20 +36,9 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+
+
 
 @keyframes App-logo-spin {
   from {
